ingress-jenkins.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    dev.okteto.com/generate-host: "domain"
    meta.helm.sh/release-name: jenkins
    meta.helm.sh/release-namespace: cicd-calvarado2004
    nginx.ingress.kubernetes.io/limit-connections: "40"
    nginx.ingress.kubernetes.io/limit-rpm: "400"
    nginx.ingress.kubernetes.io/limit-rps: "40"
  generation: 1
  labels:
    app: jenkins
    chart: jenkins-5.0.24
    heritage: Helm
    release: jenkins
  name: jenkins
  namespace: cicd-calvarado2004
spec:
  rules:
  - host: jenkins.calvarado04.com
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: http
        path: /
  tls:
  - hosts:
    - jenkins.calvarado04.com 

status:
  loadBalancer:
    ingress:
    - ip: 34.123.88.79
    - ip: 35.238.195.0
